# worldcup-forecast-2026

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  wrangler.jsonc
backend/: pyproject.toml
backend/src/wc_forecast/: __init__.py
backend/src/wc_forecast/api/: app.py
backend/src/wc_forecast/config/: settings.py
backend/src/wc_forecast/data/: __init__.py  fetch_current_results.py  fetch_historical.py  ingest.py  repository.py  schema.py  sources.py
backend/src/wc_forecast/models/: forecast.py  poisson.py  ratings.py  simulate.py
backend/src/wc_forecast/services/: evaluation_service.py  forecast_service.py
backend/tests/integration/: test_data_api.py  test_forecast_api.py  test_ingest.py
backend/tests/unit/: test_forecast.py  test_health.py  test_ratings.py  test_schema.py  test_simulate.py
cloudflare/worker/src/: index.ts
data/: source_manifest.md
data/raw/: current_matches_sample.csv  historical_results_sample.csv  rankings_sample.csv  standings_sample.csv
docs/: data-warehouse-roadmap.md  modeling-calibration.md
docs/prds/: api-frontend.md  data-ingestion.md  modeling.md  verification.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ActualResults.tsx  ForecastTable.test.tsx  ForecastTable.tsx  GroupStandings.tsx  (+5 more)
scripts/: export_cloudflare_snapshot.py  refresh_data.sh  run_forecast.sh
(+6 files in other folders)
