[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc-forecast"
version = "0.1.0"
description = "FIFA World Cup 2026 forecasting backend"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
